--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,5 @@ body {
 .bar {
   width: 2vw;
   margin-right: 0.1vw;
-  border: 1px solid black;
-  background-color: darkgreen;
+  background-color: darkblue;
 }
